--- a/writeYouAScheme.cabal
+++ b/writeYouAScheme.cabal
@@ -35,6 +35,6 @@ executable writeYouAScheme
 
     -- LANGUAGE extensions used by modules in this package.
     other-extensions: OverloadedStrings
-    build-depends:    base ^>=4.16.3.0, parsec, text, containers, mtl
+    build-depends:    base ^>=4.16.3.0, parsec, text, containers, mtl, directory
     hs-source-dirs:   app
     default-language: Haskell2010
